samples/invalid/eval/mod_by_zero.g
language g0

import 'math

asm.result = [72] ++ [mod 1 0]
